Task 62619 - PYV backend cms navigation text - v1

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/plan-your-vote-cms
+/obj/Debug/netcoreapp2.2
+/.vs
+/pyv-cms.sln
